--- a/Node js/package.json
+++ b/Node js/package.json
@@ -4,6 +4,7 @@
   "description": "Simple Web App",
   "main": "node.js",
   "scripts": {
+    "start": "node node.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
